# CavDevChallenge2024

./: .gitignore  README.md  requirements.txt
cav_autera_software/: CMakeLists.txt
cav_autera_software/calibrations/: cacc_params.yaml  logging.conf
cav_autera_software/include/utils/csv/: csv_utils.h
cav_autera_software/include/utils/logging/: easylogging++.h  loggers.h  logging.h  logging_setup.h
cav_autera_software/src/utils/logging/: easylogging++.cc  loggers.cpp  logging_setup.cpp
config/: actors.yaml  roads.yaml  scenarios.yaml
config/drive_cycle/: ftp75.csv  hwfet.csv  la4.csv  us06.csv
cpp/: CMakeLists.txt
cpp/include/: besee_utils.h  controller.h  matrix_utils.h
cpp/include/lyriq_model/: CavLyriqModel.h  CavLyriqModel_private.h  CavLyriqModel_types.h  multiword_types.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rt_zcfcn.h  rtmodel.h  rtwtypes.h  zero_crossing_types.h
cpp/src/: CONTROLLER.cpp  main.cpp
cpp/src/besee_core/: actor_utils.cpp  besee_core.cpp  lane_utils.cpp  path_utils.cpp  sim_controller_utils.cpp
cpp/src/utils/: matrix_utils.cpp
loggers/: .gitignore
python/besee_core/: actor_utils.py  besee_utils.py  lane_utils.py  path_utils.py  test_besee.py
python/metrics/: metrics.py
python/test/: conftest.py  test_cacc_requirements.py
python/viz/: viz_besee.py  vloggers.py
